# persviz

./: .gitignore  LICENSE  README.md  app.py  mkdocs.yml  packages.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: gallery.md  index.md  theory.md
examples/: synthetic_phantom.npy
src/persviz/: __init__.py  cli.py  data.py  edt.py  pairing.py  persistence.py  scene.py
tests/: test_edt.py  test_image_loader.py  test_persistence.py
