[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "persviz"
version = "0.1.0"
description = "Persistent homology visualization for porous media via the signed-EDT superlevel filtration"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Manav Arora" }]
keywords = ["topology", "persistent-homology", "porous-media", "manim", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-image>=0.21",
    "gudhi>=3.9",
    "manim>=0.18",
]

[project.optional-dependencies]
app = ["gradio>=4.31", "Pillow>=10.0"]
dev = ["pytest>=7.0", "ruff>=0.4", "mypy>=1.5"]
docs = ["mkdocs>=1.5", "mkdocs-material>=9.4", "mkdocs-video>=1.5"]

[project.scripts]
persviz = "persviz.cli:main"

[project.urls]
Homepage = "https://github.com/manavarora/persviz"
Documentation = "https://manavarora.github.io/persviz"
Issues = "https://github.com/manavarora/persviz/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/persviz"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
